@@ -1,3 +1,10 @@
+Wed Dec 18 14:32:06 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* vm_exec.h (VM_DEBUG_STACKOVERFLOW): added.
+	  disable stack overflow check for every stack pushing as default.
+
+	* vm_exec.c (vm_stack_overflow_for_insn): ditto.
+
 Wed Dec 18 10:00:22 2013  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems:  Update to RubyGems master d8f12e2.  This increases the
